[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsoncsv"
version = "2.3.0"
description = "A command tool easily convert json file to csv or xlsx."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "alingse", email = "alingse@foxmail.com" }
]
keywords = [
    "jsoncsv",
    "jsontocsv",
    "json2csv",
    "convert",
    "json2xls",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "click>=8.0",
    "xlwt>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
jsoncsv = "jsoncsv.main:jsoncsv"
mkexcel = "jsoncsv.main:mkexcel"

[project.urls]
Homepage = "https://github.com/alingse/jsoncsv"
Repository = "https://github.com/alingse/jsoncsv"

[tool.hatch.build.targets.wheel]
packages = ["jsoncsv"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["jsoncsv"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = [
    "annotation-unchecked",
]

[[tool.mypy.overrides]]
module = "jsoncsv.*"
ignore_errors = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jsoncsv --cov-report=term-missing"

# Coverage configuration
[tool.coverage.run]
source = ["jsoncsv"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
]
